add link to group APIs based on heder unlikly not working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ config.moneysystem.slf4MDCHeader=GUID
 
 logging.pattern.console=%d{ISO8601} %X{GUID} [%thread] %-5level  %logger{36}.%M \\(%line\\) - %msg%n
 
-springdoc.packages-to-scan=com.example.moneysystem.controller
+#springdoc.packages-to-scan=com.example.moneysystem.controller
 
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
